.provarCaches/00D5f000005vwGkEAI/objects/rstk__porcptaud__c.object
<CustomObject>
    <description>porcptaud__c</description>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>null /*Id &amp; TEXT(NOW()) &amp; &apos;_&apos; &amp; TEXT(porcptaud_seqno__c)*/</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(rstk__porcptaud_seqno__c) + &apos;_&apos; +  rstk__porcptaud_ordno__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__porcptaud_div__r.rstk__sydiv_div__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_datetime__c</fullName>
        <description>This is the Date and Time the transaction was created. (PG)</description>
        <inlineHelpText>This is the Date/Time that this PO Receipt was created</inlineHelpText>
        <label>Txn Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division associated with this PO Receipt</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divporcptauds</relationshipLabel>
        <relationshipName>divporcptauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_frlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This denotes the Inventory Location Id (ICLOCITEM_LOCID) of the ICLOCITEM that is updated by the PO Receipt Reversal. (PG)</description>
        <inlineHelpText>This is the Inventory Location ID associated with the PO reversal</inlineHelpText>
        <label>From Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>PO Receipt Audit</relationshipLabel>
        <relationshipName>PO_Receipt_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_frlocnum__c</fullName>
        <description>This denotes the Inventory Location Number (ICLOCITEM_LOCNUM) of the ICLOCITEM that is updated by the PO Receipt Reversal. (PG)</description>
        <inlineHelpText>This is the Inventory Location Number updated by the PO Receipt Reversal</inlineHelpText>
        <label>From Loc Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_frlocsec__c</fullName>
        <description>This denotes the Inventory Location Section (ICLOCITEM_LOCSEC) of the ICLOCITEM that is updated by the PO Receipt Reversal. 

This is usually null except for Backflushed items, Lot or Serial Controlled items. 
The governance of the setting of PORCPTAUD_FRLOCSEC is as follows: 

If this is a ‘LOT CONTROLLED’ item, then the Item’s Lot Number is in this field. There is one of these records for each Lot Number in this Location. (The ICLOCITEM_TRACKIND set to ‘L’ will denote that this is a Lot Controlled item) 

If this is a ‘SERIAL CONTROLLED’ item, then the Item’s Serial Number is in this field. There is one of these records for each Lot Number in this Location. (The ICLOCITEM_TRACKIND set to ‘S’ will denote that this is a Serial Controlled item) 

If this is a ‘BACKFLUSHED item (i.e. ICLOCITEM_BACKFLUSHIND = ‘T’) that is NON LOT and NON SERIAL CONTROLLED, then : 

If this is none of the above, then this field is set to null. (PG)</description>
        <inlineHelpText>This is the Inventory Location Section updated by the PO Receipt Reversal</inlineHelpText>
        <label>From LocSec</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_frloctype__c</fullName>
        <description>This denotes the Inventory Location Type (ICLOCITEM_LOCTYPE) of the ICLOCITEM that is updated by the PO Receipt Reversal 

This can only be ‘O’ (On Hand). (PG)</description>
        <inlineHelpText>This is the Inventory Location Type updated by the PO Receipt Reversal</inlineHelpText>
        <label>From Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_frwoord__c</fullName>
        <inlineHelpText>Work Order Number associated with a reversal</inlineHelpText>
        <label>From Work Order</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_frwoordoper__c</fullName>
        <inlineHelpText>Work Order Number Operation associated with a reversal</inlineHelpText>
        <label>From WO Operation</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_invtxnqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the transaction quantity of the PO Receipt converted by the system to the Inventory Unit of Measure. (PG)</description>
        <inlineHelpText>This is the transaction quantity of the PO Receipt converted to the Inventory Unit of Measure.</inlineHelpText>
        <label>Inventory Txn Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_lne__c</fullName>
        <description>This references the PORCPTCST_LNE field. (PG)</description>
        <inlineHelpText>This is the PO line Number that is received</inlineHelpText>
        <label>Line</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_ncmr__c</fullName>
        <inlineHelpText>This is used for Non-conforming Material</inlineHelpText>
        <label>NCMR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_ordno__c</fullName>
        <description>This references the PORCPTCST_ORDNO field. (PG)</description>
        <inlineHelpText>This is the Purchase Order Number of the PO Receipt.</inlineHelpText>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_poumcf__c</fullName>
        <description>This is the Purchasing to Inventory Unit of Measure Conversion Factor and is set from the PO line (POLINE_POUMCF). (PG)</description>
        <inlineHelpText>This is the Purchasing to Inventory Unit of Measure conversion factor.</inlineHelpText>
        <label>UOM Conv Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_puruom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the purchasing unit of measure and it is set from the PO Line (POLINE_PURUOM). (PG)</description>
        <inlineHelpText>This is the Purchasing Unit of Measure on the PO Line</inlineHelpText>
        <label>Pur UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>porcptauds</relationshipLabel>
        <relationshipName>porcptauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_rcptno__c</fullName>
        <description>This references the PORCPTCST_RCPTNO field. (PG)</description>
        <inlineHelpText>This is the Receipt Number of the PO Receipt transaction</inlineHelpText>
        <label>Receipt Num</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_ricomments__c</fullName>
        <description>There are ‘LOCATION comments’ and ‘TRANSACTION comments’ on PO RECEIPT screen. This field is set to the ‘TRANSACTION comments’. (PG)</description>
        <inlineHelpText>These are the Transaction Comments for the PO Receipt</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_rma__c</fullName>
        <inlineHelpText>RMA number associated with discrepant material</inlineHelpText>
        <label>RMA</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_scrapreason__c</fullName>
        <inlineHelpText>Scrapped Reason for material scrapped</inlineHelpText>
        <label>Scrap Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_seqno__c</fullName>
        <description>This is the number of ‘transactions’ that occur for a given receipt. If there is a PO Receipt, then this value is a ‘1’. If there is a PO Receipt Reversal, then this value is a 2. (PG)</description>
        <inlineHelpText>This is the number of transactions that occur for a given Receipt</inlineHelpText>
        <label>Sequence Num</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_serialctr__c</fullName>
        <inlineHelpText>The total number of Serial Numbers contained in the Serial Text</inlineHelpText>
        <label>Serial Count (in Serial Numbers)</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_serialtext__c</fullName>
        <description>If this Item is Serial controlled and the input screen allows for one serial number to be entered for a business transaction, then those serial numbers will be recorded and stamped in this single PORCPTAUD transaction that represents the business transaction. When there is a value in the PORCPTAUD_SERIALTEXT field, then the sytxncst record settings are as follows: 

The PORCPTAUD_SRLNO is set to the very first Serial Number in that set 

The PORCPTAUD_SERIALTEXT contains all of the Serial Numbers in that set 

The PORCPTAUD_SERIALCTR is a number that represents the number of serial number entries in the set. (PG)</description>
        <inlineHelpText>Obsolete Field</inlineHelpText>
        <label>ZZObsolete</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_serialtxt__c</fullName>
        <inlineHelpText>This contains all of the Serial Numbers being received</inlineHelpText>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A purchase order (POLINE) can only be added for the Main Site of the Division (SYDIV_MAINSITE). (PG)</description>
        <inlineHelpText>This is the Site associated with this PO Receipt</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>porcptauds</relationshipLabel>
        <relationshipName>porcptauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_srlno__c</fullName>
        <description>If this Item being received is a serial controlled item (PEITEM_TRACKSRL = ‘T’), then there is one record created for each serial number received. 

If this Item is Serial controlled, then the Serial Number is set from the PO Receipt Entry screen. 

The setting of this field and the SYTXNCST_SRLNO field are the same for this PO Receipt (or PO Receipt Reversal) transaction. 

The PO Receipt function provides for the capability to enter many serial numbers. In these situations, the PORCPTAUD record settings are as follows: 

The PORCPTAUD_SRLNO is set to the very first Serial Number in that set 

The PORCPTAUD_SERIALTEXT contains all of the Serial Numbers in that set 

The PORCPTAUD_SERIALCTR is a number that represents the number of serial number entries in the set.
(PG)</description>
        <inlineHelpText>This is the first Serial Number in a Serial Set (if more than 1)</inlineHelpText>
        <label>Serial Num</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_tolocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This denotes the Inventory Location Id (ICLOCITEM_LOCID) of the ICLOCITEM that is updated by the PO Receipt. (PG)</description>
        <inlineHelpText>This is the Inventory Location ID associated with the  PO Receipt</inlineHelpText>
        <label>To Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>PO Receipt Audit (tolocid_ui)</relationshipLabel>
        <relationshipName>PO_Receipt_Audit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_tolocnum__c</fullName>
        <description>This denotes the Inventory Location Number (ICLOCITEM_LOCNUM) of the ICLOCITEM that is updated by the PO Receipt. (PG)</description>
        <inlineHelpText>This is the Inventory Location Number updated by the PO Receipt</inlineHelpText>
        <label>To Loc Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_tolocsec__c</fullName>
        <description>This denotes the Inventory Location Section (ICLOCITEM_LOCSEC) of the ICLOCITEM that is updated by the PO Receipt. 

See explanation in PORCPTAUD_FRLOCSEC. (PG)</description>
        <inlineHelpText>This is the Inventory Location Section updated by the PO Receipt</inlineHelpText>
        <label>To LocSec</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_toloctype__c</fullName>
        <description>This denotes the Inventory Location Type (ICLOCITEM_LOCTYPE) of the ICLOCITEM that is updated by the PO Receipt. 

This can only be ‘O’ (On Hand). (PG)</description>
        <inlineHelpText>This is the Inventory Location Type updated by the PO Receipt</inlineHelpText>
        <label>To Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_tooper__c</fullName>
        <inlineHelpText>This is the Work Order Operation updated by the PO Receipt Reversal</inlineHelpText>
        <label>To Operation</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_towoord__c</fullName>
        <inlineHelpText>This is the Work Order Number updated by the PO Receipt</inlineHelpText>
        <label>To Work Order</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_towoordoper__c</fullName>
        <inlineHelpText>This is the Work Order Number Operation updated by the PO Receipt</inlineHelpText>
        <label>To WO Operation</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_txnid__c</fullName>
        <description>This is set to the SYTXNCST_TXNID associated to the PO RECEIPT transaction (or reversal) which are: 

‘PORCPT’ - PO Receipt 

‘PORCPTR’ – PO Receipt Reversal. (PG)</description>
        <inlineHelpText>This is the Cost Transaction ID associated with the PO Receipt</inlineHelpText>
        <label>Txn ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_txnqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the transaction quantity (as input by the user) of the PO Receipt in the Purchasing Unit of Measure.  (PG)</description>
        <inlineHelpText>This is the transaction quantity of the PO Receipt in the Purchasing Unit of Measure.</inlineHelpText>
        <label>Txn Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_txnsubid__c</fullName>
        <description>This is set to the SYTXNCST_TXNSUBID associated to the PO RECEIPT transaction (or reversal) 

Currently there are only two sub transaction types within the ‘PO RECEIVING FUNCTION’ (PORCPT &amp; PORCPTR). They are: 

RA - PO RECEIPT ACCEPT INTO STOCK 

RAR - PO RECEIPT REVERSAL OF AN ACCEPT INTO STOCK 

When more functionality concerning Receiving/Inspection is ‘released’, then there will be more sub transaction types. (PG)</description>
        <inlineHelpText>Transaction Sub-ID</inlineHelpText>
        <label>TXNSUBID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptaud_usrno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user number that executed the PO Receipt transaction. 

Refer to USER description (in Common Fields/Concepts Section).  (PG)</description>
        <inlineHelpText>This is the User Number  associated with this PO Receipt</inlineHelpText>
        <label>usrno</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>PO Receipt Audit</relationshipLabel>
        <relationshipName>PO_Receipt_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Receipt Audit</label>
    <listViews>
        <fullName>rstk__RS_PO_Receipt_Audit</fullName>
        <columns>NAME</columns>
        <columns>rstk__porcptaud_div__c</columns>
        <columns>rstk__porcptaud_datetime__c</columns>
        <columns>rstk__porcptaud_ordno__c</columns>
        <columns>rstk__porcptaud_lne__c</columns>
        <columns>rstk__porcptaud_tolocsec__c</columns>
        <columns>rstk__porcptaud_frlocsec__c</columns>
        <columns>rstk__porcptaud_txnid__c</columns>
        <columns>rstk__porcptaud_rcptno__c</columns>
        <columns>rstk__porcptaud_txnqty__c</columns>
        <columns>rstk__porcptaud_tolocid__c</columns>
        <columns>rstk__porcptaud_tolocnum__c</columns>
        <columns>rstk__porcptaud_frlocid__c</columns>
        <columns>rstk__porcptaud_frlocnum__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Receipt Audit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PORCPTAUD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Receipt Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>